# azure-devops-ai-coder

./: .gitignore  README.md
app/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
app/src/: azure_devops.py  coder.py  config.py  main.py  queue_worker.py  webhook.py
terraform/: main.tf  outputs.tf  providers.tf  variables.tf
